--- a/ganando_precision_con_los_selectores_en_CSS.html
+++ b/ganando_precision_con_los_selectores_en_CSS.html
@@ -6,10 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
-    <link rel="stylesheet" href="textos.css">
+    <link rel="stylesheet" href="ganando_precision.css">
     <title>Ganando precision con los selectores en CSS</title>
 </head>
 <body>
+    <style> {
+        #elemento-1{
+        background-color: red
+        font-size: 2rem
+        };
+    </style>    
     <div class="seccion">
         <h1 id="titulo" class="valor-encabezado">Lista de la compra</h1>
         <ul>
