--- a/formulario_moderno/login.html
+++ b/formulario_moderno/login.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/login.css">
+    <title>Login form</title>
+</head>
+<body>
+    <div class="container">
+        <h3>Registrate en los formularios</h3>
+        <div class="botones">
+            <button class="google-btn">
+                <picture>
+                    <img src="https://freesvg.org/img/1534129544.png" alt="Logo-google">
+                </picture>
+                <span>Registrarse con Google</span>
+            </button>
+            <button class="twitter-btn">
+                <picture>T</picture>
+            </button>
+        </div>
+        <div class="separator">
+            <hr>
+            <span>O...</span>
+            <hr>
+        </div>
+        <form action="" method="">
+            <div class="section-inputs">
+                <label for="name">
+                    <span>Name</span>
+                    <input type="text" id="name" name="name">
+                </label>
+                  <label for ="username">
+                    <span>Username</span>
+                    <input type="text" id="username" name="username">
+                </label>
+            </div>    
+                  <label for="email">
+                    <span>E-mail</span>
+                    <input type="text" id="email" name="email">
+                </label>
+                  <label for="password">
+                    <span>Password</span>
+                    <input type="password" id="password" name ="password" placeholder="6+ caracteres">
+                </label>
+                <label for="checkbox" class="checkbox-label">
+                    <input type="checkbox">
+                    <span>Acepto las condiciones y el aviso legal</span>
+                </label>
+                <button type="submit" class="submit-btn">Crear cuenta</button>
+            
+        </form>
 
+
+
+
+    </div>
+</body>
+</html>
